# f1-race-replay

./: .gitignore  README.md  docker-compose.yml  nx.json  package-lock.json  package.json  poetry.toml  pyproject.toml  tsconfig.json
.devcontainer/: devcontainer.json  setup.sh
.github/workflows/: ci.yml
apps/f1-car-data-stub/: Dockerfile  README.md  project.json  pyproject.toml
apps/f1-car-data-stub/f1_car_data_stub/: __init__.py  __main__.py
apps/f1-car-data-stub/tests/: conftest.py  test_f1_car_data_stub.py  test_fastf1.py  test_get_car_telemetry.py  test_hello.py  test_telemetry_transformer.py
apps/f1-race-viewer/: Dockerfile  index.html  package.json  project.json  vite.config.ts
apps/f1-race-viewer-e2e/: cypress.config.ts  package.json  project.json
apps/f1-race-viewer/public/: f1-circuits.geojson  f1-locations.geojson  low_poly_f1.glb
apps/kafka-websocket-bridge/: Dockerfile  README.md  project.json  pyproject.toml
apps/kafka-websocket-bridge/kafka_websocket_bridge/: __init__.py  __main__.py  client.py  hello.py  settings.py
apps/kafka-websocket-bridge/tests/: test_hello.py  test_kafka_websocket_bridge.py
apps/websocket-debugger/: README.md  project.json  pyproject.toml
apps/websocket-debugger/websocket_debugger/: __main__.py
libs/f1-race-replay-py-helpers/: README.md  project.json  pyproject.toml
libs/f1-race-replay-py-helpers/f1_race_replay_py_helpers/: hello.py
libs/f1-race-replay-py-helpers/tests/: test_hello.py
libs/f1-replay-data-model/: compile_protos.sh
libs/f1-replay-py-helpers/: README.md  project.json  pyproject.toml
(+29 files in other folders)
